# testproject

./: CMakeLists.txt  main.cpp
data/: input1.txt  input2.txt  input4.txt
include/: chunkattr.h  event.h  read.h  storyReader.h  storyWriter.h  write.h
src/: chunkattr.cpp  event.cpp  read.cpp  storyReader.cpp  storyWriter.cpp  write.cpp  write.cpp.bak
test/: CMakeLists.txt  readQuery.cpp  readQuery.h  testReadWrite.cpp
